# cl-train

./: CMakeLists.txt
include/h/: log.h
include/hpp/: clenv.hpp
src/: CMakeLists.txt
src/clinfo/: CMakeLists.txt  clinfo.cpp
src/helloworld/: CMakeLists.txt  helloworld.cpp
